# clone-ora

./: .dockerignore  .env.example  .gitignore  Dockerfile  PERSONA.md  README.md  REFERENCE.md  fly.toml  manifest.yaml  pyproject.toml  schema.sql
data/: clone.yaml
src/ora/: __init__.py  app.py  config.py  db.py  health.py  llm.py  memory.py  persona.py  reading.py  slack_history.py  subjects.py
src/ora/charts/: __init__.py  render.py  saju.py  western.py
src/ora/handlers/: __init__.py  commands.py  daily.py  dms.py  huddle.py  mentions.py  setup_modal.py
src/ora/scripts/: __init__.py  init.py
