[project]
name = "ora"
version = "0.1.0"
description = "ora — believer-practitioner persona doing 사주 and Western astrology for clone, via Slack."
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.20",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pytz>=2024.1",
    "lunar-python>=1.4",   # 사주 / lunar calendar / four pillars
    "kerykeion>=4.0",      # Western natal charts (built on Swiss Ephemeris)
]

[project.scripts]
ora = "ora.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ora"]
